--- a/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
@@ -67,7 +67,7 @@
   {% block sticky_content %}
 
     {% include "@bolt-components-navbar/navbar.twig" with {
-        theme: "xdark",
+        theme: "xlight",
         center: true,
         title: {
           "tag": "h2",
@@ -502,5 +502,27 @@
     {% endembed %}
 {# End governance #}
 
+  
+    {% include '@bolt-components-share/share.twig' with {
+      inline: true,
+      sources: [
+        {
+          name: "facebook",
+          url: "https://www.facebook.com/sharer/sharer.php?u={url}&src=sdkpreparse"
+        },
+        {
+          name: "twitter",
+          url: "https://twitter.com/intent/tweet?url={url}&text={title}&via={via}&hashtags={hashtags}"
+        },
+        {
+          name: "linkedin",
+          url: "https://www.linkedin.com/shareArticle?url={url}&title={title}"
+        },
+        {
+          name: "email",
+          url: "mailto:?&body=Sample%20Text%20--%20https%3A//bolt-design-system.com"
+        }
+      ]
+    } only %}
   
 {% endblock %}
