--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
@@ -2,72 +2,24 @@
   title: "Toggle Menu"
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
-      "links": [
-        {
+    {% include "@bolt-components-block-list/block-list.twig" with {
+      "items": [
+        include("@bolt-components-link/link.twig", {
           "text": "Link 1 Text",
           "url": "#link-1-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 2 Text",
           "url": "#link-2-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 3 Text",
           "url": "#link-3-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 4 Text",
           "url": "#link-4-url"
-        },
-        {
-          "text": "Link 5 Text",
-          "url": "#link-5-url"
-        },
-        {
-          "text": "Link 6 Text",
-          "url": "#link-6-url"
-        },
-        {
-          "text": "Link 7 Text",
-          "url": "#link-7-url"
-        },
-        {
-          "text": "Link 8 Text",
-          "url": "#link-8-url"
-        },
-        {
-          "text": "Link 9 Text",
-          "url": "#link-9-url"
-        },
-        {
-          "text": "Link 10 Text",
-          "url": "#link-10-url"
-        },
-        {
-          "text": "Link 11 Text",
-          "url": "#link-12-url"
-        },
-        {
-          "text": "Link 13 Text",
-          "url": "#link-13-url"
-        },
-        {
-          "text": "Link 14 Text",
-          "url": "#link-14-url"
-        },
-        {
-          "text": "Link 15 Text",
-          "url": "#link-15-url"
-        },
-        {
-          "text": "Link 16 Text",
-          "url": "#link-16-url"
-        },
-        {
-          "text": "Link 17 Text",
-          "url": "#link-17-url"
-        }
+        }),
       ]
     } %}
   {% endblock %}
