--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/15-dropdown-collapse.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/15-dropdown-collapse.twig
@@ -3,24 +3,24 @@
   collapse: true
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
-      "links": [
-        {
-          "text": "Features",
-          "url": "#p-f3ff267c-5fb8-4e2f-8682-52663b5437df"
-        },
-        {
-          "text": "Resources",
-          "url": "#p-12de80d7-1c57-4bef-a173-07d898f8e356"
-        },
-        {
-          "text": "Industry Apps",
-          "url": "#p-468a47c1-fe65-46d4-b8c7-9dbfe8404ee9"
-        },
-        {
-          "text": "Customer Success",
-          "url": "#p-6618d817-126e-46d1-955a"
-        }
+    {% include "@bolt-components-block-list/block-list.twig" with {
+      "items": [
+        include("@bolt-components-link/link.twig", {
+          "text": "Link 1 Text",
+          "url": "#link-1-url"
+        }),
+        include("@bolt-components-link/link.twig", {
+          "text": "Link 2 Text",
+          "url": "#link-2-url"
+        }),
+        include("@bolt-components-link/link.twig", {
+          "text": "Link 3 Text",
+          "url": "#link-3-url"
+        }),
+        include("@bolt-components-link/link.twig", {
+          "text": "Link 4 Text",
+          "url": "#link-4-url"
+        }),
       ]
     } %}
   {% endblock %}
