--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/25-dropdown-long-header.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/25-dropdown-long-header.twig
@@ -3,40 +3,40 @@
   center: true
 } %}
   {% block content %}
-    {% include "@bolt-components-nav/nav.twig" with {
-      "links": [
-        {
+    {% include "@bolt-components-block-list/block-list.twig" with {
+      "items": [
+        include("@bolt-components-link/link.twig", {
           "text": "Link 1 Text",
           "url": "#link-1-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 2 Text",
           "url": "#link-2-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 3 Text",
           "url": "#link-3-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 4 Text",
           "url": "#link-4-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 5 Text",
           "url": "#link-5-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 6 Text",
           "url": "#link-6-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 7 Text",
           "url": "#link-7-url"
-        },
-        {
+        }),
+        include("@bolt-components-link/link.twig", {
           "text": "Link 8 Text",
           "url": "#link-8-url"
-        }
+        }),
       ]
     } %}
   {% endblock %}
