fix: update navlink active styling fallback if CSS Vars aren't supported

--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -100,8 +100,8 @@ bolt-navlink {
     top: 6px;
     left: 0;
     bottom: 6px;
-    background-color: inherit;
-    background-color: var(--bolt-theme-primary,inherit);
+    background-color: currentColor;
+    background-color: var(--bolt-theme-primary, inherit);
     content: '';
   }
 }
